# django-dynamic-storage

./: .gitignore  .pre-commit-config.yaml  README.md  generate_cov_img.py  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml  tox.yml
django_dynamic_storage/: models.py  signals.py  storage.py
dynamic_storage/: models.py  storage.py
dynamic_storage/test/: storage.py
tests/: .env.dis  .gitignore  asgi.py  conftest.py  settings.py  test_base.py  test_imagefield.py  test_signal.py
tests/testapp/: models.py  storages.py
tests/testapp/migrations/: 0001_initial.py  0002_filemodel_imagemodel.py
