[tool.poetry]
name = "django-dynamic-storage"
version = "1.0.0"
description = "Use and choose storages at runtime based on your logic for each model FileField instance separately."
authors = ["Amir Khalife <eng.amir.bu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/engAmirEng/django-dynamic-storage"
keywords = ["django", "django-storages", "djangostorage"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
packages = [{include = "dynamic_storage"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
Django = ">=2.2,<5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
django_find_project = false
pythonpath = ". tests"
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.isort]
known_first_party="django,pytest"
known_apps="dynamic_storage"
lines_after_imports=2
profile = "black"
py_version=39
sections="FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,APPS,LOCALFOLDER"
